--- a/stylesheets/config/_setup.scss
+++ b/stylesheets/config/_setup.scss
@@ -67,7 +67,6 @@ ul {
 }
 
 #body {
-  backdrop-filter: blur(100px);
   display: flex;
   flex-direction: column;
   min-height: 100%;
